@@ -20,12 +20,12 @@ import java.lang.reflect.Parameter;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.lang.reflect.TypeVariable;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import org.eclipse.fordiac.ide.model.data.DataType;
@@ -60,44 +60,44 @@ public interface Functions {
 	 * @throws Throwable             for any other error during invocation */
 	static Value invoke(final Class<? extends Functions> clazz, final String name, final List<Object> arguments)
 			throws Throwable {
-		final Method method = findMethod(clazz, name, arguments.stream()
-				.map(argument -> argument != null ? argument.getClass() : Object.class).collect(Collectors.toList()));
+		final Method method = findMethod(clazz, name,
+				arguments.stream().map(argument -> argument != null ? argument.getClass() : Object.class).toList());
 		final MethodHandle handle = MethodHandles.lookup().unreflect(method);
 		return (Value) handle.invokeWithArguments(arguments);
 	}
 
 	/** Find a function from {@code clazz} with the given name that is applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method reference corresponding to the function
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
-	static Method findMethod(final Class<? extends Functions> clazz, final String name, final Class<?>... atypes)
+	static Method findMethod(final Class<? extends Functions> clazz, final String name, final Class<?>... argumentTypes)
 			throws NoSuchMethodException, SecurityException {
-		return findMethod(clazz, name, List.of(atypes));
+		return findMethod(clazz, name, List.of(argumentTypes));
 	}
 
 	/** Find a function from {@code clazz} with the given name that is applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method reference corresponding to the function
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
-	static Method findMethod(final Class<? extends Functions> clazz, final String name, final List<Class<?>> atypes)
-			throws NoSuchMethodException, SecurityException {
+	static Method findMethod(final Class<? extends Functions> clazz, final String name,
+			final List<Class<?>> argumentTypes) throws NoSuchMethodException, SecurityException {
 		try { // try exact match first
-			return clazz.getMethod(name, atypes.toArray(new Class[atypes.size()]));
+			return clazz.getMethod(name, argumentTypes.toArray(new Class[argumentTypes.size()]));
 		} catch (final NoSuchMethodException e) { // try inexact match
 			final List<Method> methods = Stream.of(clazz.getMethods())
 					.filter(method -> method.getName().equals(name)
-							&& isAssignableFrom(List.of(method.getParameterTypes()), atypes, method.isVarArgs()))
-					.collect(Collectors.toList());
+							&& isAssignableFrom(List.of(method.getParameterTypes()), argumentTypes, method.isVarArgs()))
+					.toList();
 			if (methods.isEmpty()) {
 				throw new NoSuchMethodException(
 						String.format("No method with name %s in class %s", name, clazz.getName())); //$NON-NLS-1$
@@ -115,25 +115,24 @@ public interface Functions {
 	 * @param name  The name of the function
 	 * @return The method references corresponding to the functions */
 	static List<Method> findMethods(final Class<? extends Functions> clazz, final String name) {
-		return Stream.of(clazz.getMethods()).filter(method -> method.getName().equals(name))
-				.collect(Collectors.toList());
+		return Stream.of(clazz.getMethods()).filter(method -> method.getName().equals(name)).toList();
 	}
 
 	/** Find all functions from {@code clazz} applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method references corresponding to the functions */
-	static List<Method> findMethods(final Class<? extends Functions> clazz, final List<Class<?>> atypes) {
+	static List<Method> findMethods(final Class<? extends Functions> clazz, final List<Class<?>> argumentTypes) {
 		final Map<String, Method> exactMatches = Stream.of(clazz.getMethods())
-				.filter(method -> List.of(method.getParameterTypes()).equals(atypes))
+				.filter(method -> List.of(method.getParameterTypes()).equals(argumentTypes))
 				.collect(Collectors.toMap(Method::getName, Function.identity()));
 		return Stream.concat(exactMatches.values().stream(), // first add exact matches
 				// add inexact matches only if there is no exact match
 				Stream.of(clazz.getMethods())
-				.filter(method -> !exactMatches.containsKey(method.getName())
-						&& isAssignableFrom(List.of(method.getParameterTypes()), atypes, method.isVarArgs())))
-				.collect(Collectors.toList());
+						.filter(method -> !exactMatches.containsKey(method.getName()) && isAssignableFrom(
+								List.of(method.getParameterTypes()), argumentTypes, method.isVarArgs())))
+				.toList();
 	}
 
 	/** Find all functions from {@code clazz}
@@ -146,260 +145,263 @@ public interface Functions {
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function and infer the return type
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function and infer the return type
 	 * @return The concrete return type of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
-	static Class<? extends Value> inferReturnType(final Class<? extends Functions> clazz, final String name,
-			final List<Class<?>> atypes) throws NoSuchMethodException, SecurityException {
-		return inferReturnType(findMethod(clazz, name, atypes), atypes);
+	static Class<?> inferReturnType(final Class<? extends Functions> clazz, final String name,
+			final List<Class<?>> argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferReturnType(findMethod(clazz, name, argumentTypes), argumentTypes);
 	}
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
 	 * @return The concrete return type of the function based on the argument types */
-	static Class<? extends Value> inferReturnType(final Method method, final List<Class<?>> atypes) {
+	static Class<?> inferReturnType(final Method method, final List<Class<?>> argumentTypes) {
 		try {
 			final Type returnType = method.getGenericReturnType();
 			if (returnType instanceof TypeVariable<?>) {
 				Class<?> result = null;
-				for (int i = 0; i < atypes.size(); ++i) {
-					final Type ptype = getGenericParameterValueType(method, i);
-					if (ptype.equals(returnType)) {
-						result = commonSupertype(result, atypes.get(i));
+				for (int i = 0; i < argumentTypes.size(); ++i) {
+					final Type parameterTypeForArgument = getGenericParameterValueType(method, i);
+					if (parameterTypeForArgument != null && parameterTypeForArgument.equals(returnType)) {
+						result = commonSupertype(result, argumentTypes.get(i));
 					}
 				}
-				if (result != null) {
-					return result.asSubclass(Value.class);
+				if (result != null && method.getReturnType().isAssignableFrom(result)) {
+					return result;
 				}
 			}
 		} catch (final Exception e) {
 			// ignore
 		}
-		return method.getReturnType() != void.class ? method.getReturnType().asSubclass(Value.class) : null;
+		return method.getReturnType() != void.class ? method.getReturnType() : null;
 	}
 
 	/** Infer the concrete parameter types (i.e., resolve generic types) for a function
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function and infer the return type
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function and infer the return type
 	 * @return The concrete parameter types of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
-	static List<Class<? extends Value>> inferParameterTypes(final Class<? extends Functions> clazz, final String name,
-			final List<Class<?>> atypes) throws NoSuchMethodException, SecurityException {
-		return inferParameterTypes(findMethod(clazz, name, atypes), atypes);
+	static List<Class<?>> inferParameterTypes(final Class<? extends Functions> clazz, final String name,
+			final List<Class<?>> argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferParameterTypes(findMethod(clazz, name, argumentTypes), argumentTypes);
 	}
 
 	/** Infer the concrete parameter types (i.e., resolve generic types) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
 	 * @return The concrete parameter types of the function based on the argument types */
-	static List<Class<? extends Value>> inferParameterTypes(final Method method, final List<Class<?>> atypes) {
-		final List<Class<? extends Value>> result = new ArrayList<>(atypes.size());
-		for (int i = 0; i < atypes.size(); ++i) {
-			result.add(inferParameterType(method, atypes, i));
-		}
-		return result;
+	static List<Class<?>> inferParameterTypes(final Method method, final List<Class<?>> argumentTypes) {
+		return IntStream.range(0, Math.max(method.getParameterCount(), argumentTypes.size()))
+				.<Class<?>>mapToObj(i -> inferParameterType(method, argumentTypes, i)).filter(Objects::nonNull)
+				.toList();
 	}
 
 	/** Infer a single concrete parameter type (i.e., resolve generic type) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
-	 * @param index  The parameter index
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
+	 * @param index         The parameter index
 	 * @return The concrete parameter type of the function based on the argument types */
-	static Class<? extends Value> inferParameterType(final Method method, final List<Class<?>> atypes,
-			final int index) {
+	static Class<?> inferParameterType(final Method method, final List<Class<?>> argumentTypes, final int index) {
 		try {
 			final Type parameterType = getGenericParameterValueType(method, index);
-			if (parameterType instanceof TypeVariable<?>) {
-				Class<?> result = null;
-				for (int i = 0; i < atypes.size(); ++i) {
-					final Type ptype = getGenericParameterValueType(method, i);
-					if (ptype.equals(parameterType)) {
-						result = commonSupertype(result, atypes.get(i));
+			if (parameterType instanceof final TypeVariable<?> parameterTypeVariable) {
+				final var parameterTypeBound = getCommonTypeBound(parameterTypeVariable);
+				if (parameterTypeBound != null) {
+					Class<?> result = null;
+					for (int i = 0; i < argumentTypes.size(); ++i) {
+						final Type parameterTypeForArgument = getGenericParameterValueType(method, i);
+						if (parameterTypeForArgument != null && parameterTypeForArgument.equals(parameterType)) {
+							result = commonSupertype(result, argumentTypes.get(i));
+						}
 					}
+					if (result != null && parameterTypeBound.isAssignableFrom(result)) {
+						return result;
+					}
+					return parameterTypeBound;
 				}
-				if (result != null) {
-					return result.asSubclass(Value.class);
-				}
-			} else if (parameterType instanceof Class<?>) {
-				return ((Class<?>) parameterType).asSubclass(Value.class);
+			} else if (parameterType instanceof final Class<?> parameterClass) {
+				return parameterClass;
 			}
 		} catch (final Exception e) {
 			// ignore
 		}
-		return getParameterType(method, index).asSubclass(Value.class);
+		return getParameterValueType(method, index);
 	}
 
 	/** Find a function from {@code clazz} with the given name that is applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method reference corresponding to the function
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
 	static Method findMethodFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final DataType... atypes) throws NoSuchMethodException, SecurityException {
-		return findMethodFromDataTypes(clazz, name, List.of(atypes));
+			final DataType... argumentTypes) throws NoSuchMethodException, SecurityException {
+		return findMethodFromDataTypes(clazz, name, List.of(argumentTypes));
 	}
 
 	/** Find a function from {@code clazz} with the given name that is applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method reference corresponding to the function
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
 	static Method findMethodFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final List<DataType> atypes) throws NoSuchMethodException, SecurityException {
-		return findMethod(clazz, name, getValueTypes(atypes));
+			final List<DataType> argumentTypes) throws NoSuchMethodException, SecurityException {
+		return findMethod(clazz, name, getValueTypes(argumentTypes));
 	}
 
 	/** Find all functions from {@code clazz} applicable for the concrete argument types
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param atypes The argument types used to select the function
+	 * @param clazz         The class defining a set of functions
+	 * @param argumentTypes The argument types used to select the function
 	 * @return The method references corresponding to the functions */
-	static List<Method> findMethodsFromDataTypes(final Class<? extends Functions> clazz, final List<DataType> atypes) {
-		return findMethods(clazz, getValueTypes(atypes));
+	static List<Method> findMethodsFromDataTypes(final Class<? extends Functions> clazz,
+			final List<DataType> argumentTypes) {
+		return findMethods(clazz, getValueTypes(argumentTypes));
 	}
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function and infer the return type
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function and infer the return type
 	 * @return The concrete return type of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
 	static DataType inferReturnTypeFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final DataType... atypes) throws NoSuchMethodException, SecurityException {
-		return inferReturnTypeFromDataTypes(clazz, name, List.of(atypes));
+			final DataType... argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferReturnTypeFromDataTypes(clazz, name, List.of(argumentTypes));
 	}
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function and infer the return type
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function and infer the return type
 	 * @return The concrete return type of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
 	static DataType inferReturnTypeFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final List<DataType> atypes) throws NoSuchMethodException, SecurityException {
-		return inferReturnTypeFromDataTypes(findMethodFromDataTypes(clazz, name, atypes), atypes);
+			final List<DataType> argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferReturnTypeFromDataTypes(findMethodFromDataTypes(clazz, name, argumentTypes), argumentTypes);
 	}
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
 	 * @return The concrete return type of the function based on the argument types */
-	static DataType inferReturnTypeFromDataTypes(final Method method, final List<DataType> atypes) {
+	static DataType inferReturnTypeFromDataTypes(final Method method, final List<DataType> argumentTypes) {
 		try {
 			final Type returnType = method.getGenericReturnType();
 			if (returnType instanceof TypeVariable<?>) {
 				DataType result = null;
-				for (int i = 0; i < atypes.size(); ++i) {
-					final Type ptype = getGenericParameterValueType(method, i);
-					if (ptype.equals(returnType)) {
-						result = commonSupertype(result, atypes.get(i));
+				for (int i = 0; i < argumentTypes.size(); ++i) {
+					final Type parameterTypeForArgument = getGenericParameterValueType(method, i);
+					if (parameterTypeForArgument != null && parameterTypeForArgument.equals(returnType)) {
+						result = commonSupertype(result, argumentTypes.get(i));
 					}
 				}
-				if (result != null) {
+				if (result != null && ValueOperations.dataType(method.getReturnType()).isAssignableFrom(result)) {
 					return result;
 				}
 			}
 		} catch (final Exception e) {
 			// ignore
 		}
-		return method.getReturnType() != void.class
-				? ValueOperations.dataType(method.getReturnType().asSubclass(Value.class))
-						: null;
+		return method.getReturnType() != void.class ? ValueOperations.dataType(method.getReturnType()) : null;
 	}
 
 	/** Infer the concrete return type (i.e., resolve generic type) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
 	 * @return The concrete return type of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found */
 	static List<DataType> inferParameterTypesFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final DataType... atypes) throws NoSuchMethodException, SecurityException {
-		return inferParameterTypesFromDataTypes(clazz, name, List.of(atypes));
+			final DataType... argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferParameterTypesFromDataTypes(clazz, name, List.of(argumentTypes));
 	}
 
 	/** Infer the concrete parameter types (i.e., resolve generic types) for a function
 	 *
-	 * @param clazz  The class defining a set of functions
-	 * @param name   The name of the function
-	 * @param atypes The argument types used to select the function and infer the return type
+	 * @param clazz         The class defining a set of functions
+	 * @param name          The name of the function
+	 * @param argumentTypes The argument types used to select the function and infer the return type
 	 * @return The concrete parameter types of the function based on the argument types
 	 * @throws SecurityException     if access to the method is denied
 	 * @throws NoSuchMethodException if no applicable method could be found
 	 * @throws IllegalStateException if multiple candidate methods match */
 	static List<DataType> inferParameterTypesFromDataTypes(final Class<? extends Functions> clazz, final String name,
-			final List<DataType> atypes) throws NoSuchMethodException, SecurityException {
-		return inferParameterTypesFromDataTypes(findMethodFromDataTypes(clazz, name, atypes), atypes);
+			final List<DataType> argumentTypes) throws NoSuchMethodException, SecurityException {
+		return inferParameterTypesFromDataTypes(findMethodFromDataTypes(clazz, name, argumentTypes), argumentTypes);
 	}
 
 	/** Infer the concrete parameter types (i.e., resolve generic types) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
 	 * @return The concrete parameter types of the function based on the argument types */
-	static List<DataType> inferParameterTypesFromDataTypes(final Method method, final List<DataType> atypes) {
-		final List<DataType> result = new ArrayList<>(atypes.size());
-		for (int i = 0; i < atypes.size(); ++i) {
-			result.add(inferParameterTypeFromDataType(method, atypes, i));
-		}
-		return result;
+	static List<DataType> inferParameterTypesFromDataTypes(final Method method, final List<DataType> argumentTypes) {
+		return IntStream.range(0, Math.max(method.getParameterCount(), argumentTypes.size()))
+				.mapToObj(i -> inferParameterTypeFromDataType(method, argumentTypes, i)).filter(Objects::nonNull)
+				.toList();
 	}
 
 	/** Infer a single concrete parameter type (i.e., resolve generic type) for a function
 	 *
-	 * @param method The method reference corresponding to the function
-	 * @param atypes The argument types used to infer the return type
-	 * @param index  The parameter index
+	 * @param method        The method reference corresponding to the function
+	 * @param argumentTypes The argument types used to infer the return type
+	 * @param index         The parameter index
 	 * @return The concrete parameter type of the function based on the argument types */
-	static DataType inferParameterTypeFromDataType(final Method method, final List<DataType> atypes, final int index) {
+	static DataType inferParameterTypeFromDataType(final Method method, final List<DataType> argumentTypes,
+			final int index) {
 		try {
 			final Type parameterType = getGenericParameterValueType(method, index);
-			if (parameterType instanceof TypeVariable<?>) {
-				DataType result = null;
-				for (int i = 0; i < atypes.size(); ++i) {
-					final Type ptype = getGenericParameterValueType(method, i);
-					if (ptype.equals(parameterType)) {
-						result = commonSupertype(result, atypes.get(i));
+			if (parameterType instanceof final TypeVariable<?> parameterTypeVariable) {
+				final var parameterTypeBound = ValueOperations.dataType(getCommonTypeBound(parameterTypeVariable));
+				if (parameterTypeBound != null) {
+					DataType result = null;
+					for (int i = 0; i < argumentTypes.size(); ++i) {
+						final Type parameterTypeForArgument = getGenericParameterValueType(method, i);
+						if (parameterTypeForArgument != null && parameterTypeForArgument.equals(parameterType)) {
+							result = commonSupertype(result, argumentTypes.get(i));
+						}
 					}
+					if (result != null && parameterTypeBound.isAssignableFrom(result)) {
+						return result;
+					}
+					return parameterTypeBound;
 				}
-				if (result != null) {
-					return result;
-				}
-			} else if (parameterType instanceof Class<?>) {
-				return ValueOperations.dataType(((Class<?>) parameterType).asSubclass(Value.class));
+			} else if (parameterType instanceof final Class<?> parameterClass) {
+				return ValueOperations.dataType(parameterClass);
 			}
 		} catch (final Exception e) {
 			// ignore
 		}
-		return ValueOperations.dataType(getParameterType(method, index).asSubclass(Value.class));
+		return ValueOperations.dataType(getParameterValueType(method, index));
 	}
 
 	/** Get the generic parameter value type
@@ -409,11 +411,9 @@ public interface Functions {
 	 * @return The generic parameter type */
 	static Type getGenericParameterValueType(final Method method, final int index) {
 		final Type type = getGenericParameterType(method, index);
-		if (type instanceof ParameterizedType) {
-			final ParameterizedType parameterizedType = (ParameterizedType) type;
-			if (parameterizedType.getRawType() == Variable.class) {
-				return parameterizedType.getActualTypeArguments()[0];
-			}
+		if (type instanceof final ParameterizedType parameterizedType
+				&& parameterizedType.getRawType() == Variable.class) {
+			return parameterizedType.getActualTypeArguments()[0];
 		}
 		return type;
 	}
@@ -428,16 +428,34 @@ public interface Functions {
 			final Type varargsType = method.getGenericParameterTypes()[method.getParameterCount() - 1];
 			if (varargsType instanceof Class<?>) {
 				return ((Class<?>) varargsType).getComponentType();
-			} else if (varargsType instanceof GenericArrayType) {
-				return ((GenericArrayType) varargsType).getGenericComponentType();
+			} else if (varargsType instanceof final GenericArrayType genericArrayType) {
+				return genericArrayType.getGenericComponentType();
 			} else {
 				throw new IllegalStateException("Unsupported varargs type"); //$NON-NLS-1$
 			}
 		} else if (index < method.getParameterCount()) {
 			return method.getGenericParameterTypes()[index];
-		} else {
-			throw new IndexOutOfBoundsException("Parameter index out of bounds"); //$NON-NLS-1$
 		}
+		return null;
+	}
+
+	/** Get the parameter value type
+	 *
+	 * @param method The method reference corresponding to the function
+	 * @param index  The index of the parameter
+	 * @return The parameter type */
+	static Class<?> getParameterValueType(final Method method, final int index) {
+		final Type parameterType = getGenericParameterValueType(method, index);
+		if (parameterType instanceof final TypeVariable<?> parameterTypeVariable) {
+			final var parameterTypeBound = getCommonTypeBound(parameterTypeVariable);
+			if (parameterTypeBound != null) {
+				return parameterTypeBound;
+			}
+		} else if (parameterType instanceof final Class<?> parameterClass) {
+			return parameterClass;
+		}
+		// fallback to non-generic lookup
+		return getParameterType(method, index);
 	}
 
 	/** Get the parameter type
@@ -450,9 +468,8 @@ public interface Functions {
 			return method.getParameterTypes()[method.getParameterCount() - 1].getComponentType();
 		} else if (index < method.getParameterCount()) {
 			return method.getParameterTypes()[index];
-		} else {
-			throw new IndexOutOfBoundsException("Parameter index out of bounds"); //$NON-NLS-1$
 		}
+		return null;
 	}
 
 	/** Get the parameter
@@ -465,62 +482,68 @@ public interface Functions {
 			return method.getParameters()[method.getParameterCount() - 1];
 		} else if (index < method.getParameterCount()) {
 			return method.getParameters()[index];
-		} else {
-			throw new IndexOutOfBoundsException("Parameter index out of bounds"); //$NON-NLS-1$
 		}
+		return null;
 	}
 
-	private static boolean isAssignableFrom(final List<Class<?>> ptypes, final List<Class<?>> atypes,
+	/** Get the common type bound
+	 *
+	 * @param typeVariable The type variable
+	 * @return The common type bound */
+	private static Class<?> getCommonTypeBound(final TypeVariable<?> typeVariable) {
+		return Stream.of(typeVariable.getBounds()).filter(Class.class::isInstance).map(Class.class::cast)
+				.reduce(Functions::commonSubtype).orElse(null);
+	}
+
+	private static boolean isAssignableFrom(final List<Class<?>> parameterTypes, final List<Class<?>> argumentTypes,
 			final boolean varargs) {
-		if (isAssignableFrom(ptypes, atypes)) {
+		if (isAssignableFrom(parameterTypes, argumentTypes)) {
 			return true;
 		}
-		if (!varargs || ptypes.isEmpty()) {
+		if (!varargs || parameterTypes.isEmpty()) {
 			return false;
 		}
-		if (atypes.size() < ptypes.size() - 1) { // varargs parameter may have zero arguments
+		if (argumentTypes.size() < parameterTypes.size() - 1) { // varargs parameter may have zero arguments
 			return false;
 		}
 		// check all parameters up to varargs
-		for (int i = ptypes.size() - 2; i >= 0; --i) {
-			if (!isAssignableFrom(ptypes.get(i), atypes.get(i))) {
+		for (int i = parameterTypes.size() - 2; i >= 0; --i) {
+			if (!isAssignableFrom(parameterTypes.get(i), argumentTypes.get(i))) {
 				return false;
 			}
 		}
 		// check varargs
-		final Class<?> varargsType = ptypes.get(ptypes.size() - 1);
+		final Class<?> varargsType = parameterTypes.get(parameterTypes.size() - 1);
 		final Class<?> varargsComponentType = varargsType.getComponentType();
-		for (int i = atypes.size() - 1; i >= ptypes.size() - 1; --i) {
-			if (!isAssignableFrom(varargsComponentType, atypes.get(i))) {
+		for (int i = argumentTypes.size() - 1; i >= parameterTypes.size() - 1; --i) {
+			if (!isAssignableFrom(varargsComponentType, argumentTypes.get(i))) {
 				return false;
 			}
 		}
 		return true;
 	}
 
-	private static boolean isAssignableFrom(final List<Class<?>> ptypes, final List<Class<?>> atypes) {
-		if (atypes.size() != ptypes.size()) {
+	private static boolean isAssignableFrom(final List<Class<?>> parameterTypes, final List<Class<?>> argumentTypes) {
+		if (argumentTypes.size() != parameterTypes.size()) {
 			return false;
 		}
-		for (int i = ptypes.size() - 1; i >= 0; --i) {
-			if (!isAssignableFrom(ptypes.get(i), atypes.get(i))) {
+		for (int i = parameterTypes.size() - 1; i >= 0; --i) {
+			if (!isAssignableFrom(parameterTypes.get(i), argumentTypes.get(i))) {
 				return false;
 			}
 		}
 		return true;
 	}
 
-	private static boolean isAssignableFrom(final Class<?> ptype, final Class<?> atype) {
-		if (ptype.isAssignableFrom(atype)) {
+	private static boolean isAssignableFrom(final Class<?> parameterType, final Class<?> argumentType) {
+		if (parameterType.isAssignableFrom(argumentType)) {
 			return true;
-		} else if (Variable.class.isAssignableFrom(ptype)) {
+		} else if (Variable.class.isAssignableFrom(parameterType)) {
 			return true;
-		} else if (Value.class.isAssignableFrom(ptype) && Value.class.isAssignableFrom(atype)) {
-			final DataType type1 = ValueOperations.dataType(ptype.asSubclass(Value.class));
-			final DataType type2 = ValueOperations.dataType(atype.asSubclass(Value.class));
-			return type1 != null && type2 != null && type1.isAssignableFrom(type2);
 		}
-		return false;
+		final DataType type1 = ValueOperations.dataType(parameterType);
+		final DataType type2 = ValueOperations.dataType(argumentType);
+		return type1 != null && type2 != null && type1.isAssignableFrom(type2);
 	}
 
 	private static Class<?> commonSupertype(final Class<?> clazz1, final Class<?> clazz2) {
@@ -532,12 +555,10 @@ public interface Functions {
 			return clazz1;
 		} else if (clazz2.isAssignableFrom(clazz1)) {
 			return clazz2;
-		} else if (Value.class.isAssignableFrom(clazz1) && Value.class.isAssignableFrom(clazz2)) {
-			final DataType type1 = ValueOperations.dataType(clazz1.asSubclass(Value.class));
-			final DataType type2 = ValueOperations.dataType(clazz2.asSubclass(Value.class));
-			return ValueOperations.valueType(commonSupertype(type1, type2));
 		}
-		return null;
+		final DataType type1 = ValueOperations.dataType(clazz1);
+		final DataType type2 = ValueOperations.dataType(clazz2);
+		return ValueOperations.valueType(commonSupertype(type1, type2));
 	}
 
 	private static DataType commonSupertype(final DataType type1, final DataType type2) {
@@ -553,8 +574,36 @@ public interface Functions {
 		return null;
 	}
 
-	private static List<Class<?>> getValueTypes(final List<DataType> atypes) {
-		return atypes.stream().map(ValueOperations::valueType).map(c -> Objects.requireNonNullElse(c, Object.class))
-				.collect(Collectors.toList());
+	private static Class<?> commonSubtype(final Class<?> clazz1, final Class<?> clazz2) {
+		if (clazz1 == null) {
+			return clazz2;
+		} else if (clazz2 == null) {
+			return clazz1;
+		} else if (clazz1.isAssignableFrom(clazz2)) {
+			return clazz2;
+		} else if (clazz2.isAssignableFrom(clazz1)) {
+			return clazz1;
+		}
+		final DataType type1 = ValueOperations.dataType(clazz1);
+		final DataType type2 = ValueOperations.dataType(clazz2);
+		return ValueOperations.valueType(commonSubtype(type1, type2));
+	}
+
+	private static DataType commonSubtype(final DataType type1, final DataType type2) {
+		if (type1 == null) {
+			return type2;
+		} else if (type2 == null) {
+			return type1;
+		} else if (type1.isAssignableFrom(type2)) {
+			return type2;
+		} else if (type2.isAssignableFrom(type1)) {
+			return type1;
+		}
+		return null;
+	}
+
+	private static List<Class<?>> getValueTypes(final List<DataType> argumentTypes) {
+		return argumentTypes.stream().map(ValueOperations::valueType)
+				.<Class<?>>map(c -> Objects.requireNonNullElse(c, Object.class)).toList();
 	}
 }
